# pyagent

./: .gitignore  AGENTS.md  LICENSE  README.md  agent.py  config.py  llm_client.py  main.py  model_profiles.py  models.example.json  ollama_client.py  project_context.py  pyproject.toml  requirements.txt  test_agent.py  test_agent_demo.txt  tools.py  ui.py
examples/extensions/compaction/: __init__.py
examples/extensions/compaction/skills/: compaction.md
examples/extensions/template/: __init__.py
examples/tools/: compact_context.py  search_hf_datasets.py
pyagent/: __init__.py  agent.py  api.py  client.py  commands.py  config.py  external_tools.py  llm_client.py  main.py  model_profiles.py  ollama_client.py  project_context.py  resources.py  scaffold.py  session_logger.py  tools.py  ui.py  user_runtime.py
pyagent/extensions/: __init__.py  bus.py  loader.py  manager.py
pyagent/templates/: __init__.py  tool_template.py
skills/: testing.md  tools.md  ui.md
